--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.core-3.3.3.jar=C:\\Users\\Meteoric\\Downloads\\core-3.3.3.jar
 file.reference.javase-3.3.3.jar=C:\\Users\\Meteoric\\Downloads\\javase-3.3.3.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\Meteoric\\Downloads\\json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.core-3.3.3.jar}:\
-    ${file.reference.javase-3.3.3.jar}
+    ${file.reference.javase-3.3.3.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
